# AIRoutineAssistant

./: .gitignore  README.md  aiassistant.yaml  pyproject.toml  requiriment.txt  test.ipynb
AIRoutineAssistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Assets/Configs/: app_config copy.yaml  app_config.yaml
Assets/Configs/assistant_functions_config/: todoist_assistant_functions_config.json
Assets/DataTrack/: extraction_records.txt
Assets/ExtractedData/Todoist/: comments.pkl  completed_tasks.pkl  opened_tasks.pkl  productivity_stats.pkl  projects.pkl
Assets/Scripts/: install_airflow.sh
Assets/Sql/: create_and_setup_database.sql
Assistant/: assistant_api.py
DatabaseHandler/: MongoDBHandler.py  PostgresHandler.py
ETL/Jobs/: todoist_etl_job.py
ETL/todoist/: TodoIstExtractor.py  TodoistMetricCalculator.py  load_todoist_data_on_stagging.py  load_todoist_data_to_dw.py  todoist_extract_data.py  todoist_pipeline.py
Env/: paths copy.py  paths.py  project_types.py
Frontend/: chat-ui.css  chat-uit.html  chat.js
GettingDataETL/: transformations.py
GettingDataETL/todoist/: TodoIstExtractor.py  todoist_pipeline.py
InformationRetriever/: TodoistInformationRetriever.py
Interfaces/: DatabaseHandler.py  ETLJobInterface.py
Notebooks/: test.ipynb  test_open_ai_agents.ipynb
Tests/UnitTests/: test_todo_extraction.py
Utils/: file_handler.py  strtime_handler.py
